<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout
	android:paddingTop="7.0dip" android:layout_width="fill_parent"
	android:layout_height="wrap_content" xmlns:android="http://schemas.android.com/apk/res/android"
	
	>
	<FrameLayout android:id="@+id/progress_frame" android:padding="1.0px"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:layout_marginLeft="1.0dip">
		<ProgressBar 
			android:id="@+id/loading_progress" 
			style="@android:style/Widget.ProgressBar.Small"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:visibility="invisible"
			/>
	</FrameLayout>

	<View android:duplicateParentState="false" android:layout_width="fill_parent"
		android:layout_height="7.0dip" android:layout_below="@id/progress_frame"
		android:layout_alignLeft="@id/progress_frame" />
		

	<RelativeLayout android:duplicateParentState="true"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:layout_marginLeft="5.0dip"
		android:layout_toRightOf="@id/progress_frame"
		android:layout_centerVertical="true">
		<TextView android:id="@+id/load_title" style="?styleLoadMoreTitle"
			android:text="@string/listLoadMore"
			android:ellipsize="end" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:maxLines="2"
			android:includeFontPadding="false" android:layout_alignParentTop="true" />
			
		<TextView style="?styleCategory" android:id="@+id/load_label_subreddit"
			android:text="@string/lblSubreddit"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_marginTop="2.0dip" android:layout_below="@id/load_title"
			android:layout_alignLeft="@id/load_title" />				
		<TextView style="?styleReddit" android:id="@+id/load_subreddit"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_marginLeft="1.0dip"
			android:layout_marginTop="2.0dip" android:layout_below="@id/load_title"
			android:layout_toRightOf="@id/load_label_subreddit" />
			
		<TextView style="?styleCategory" android:id="@+id/load_label_category"
			android:text="@string/lblCategory"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_marginLeft="5.0dip" 
			android:layout_toRightOf="@id/load_subreddit"
			android:layout_alignTop="@id/load_subreddit" />		
		<TextView style="?styleReddit" android:id="@+id/load_category"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_marginLeft="1.0dip"
			android:text="Recent" android:layout_toRightOf="@id/load_label_category"
			android:layout_below="@id/load_title" android:layout_alignTop="@id/load_subreddit" />
		
		<TextView style="?styleCategory" android:id="@+id/load_label_period"
			android:text="@string/lblPeriod"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_marginLeft="5.0dip"  
			android:layout_toRightOf="@id/load_category"
			android:layout_alignTop="@id/load_subreddit" />		
		<TextView style="?styleReddit" android:ellipsize="end"
			android:id="@+id/load_period" android:layout_width="wrap_content"
			android:layout_marginLeft="1.0dip"
			android:layout_height="wrap_content" android:lines="1"
			android:layout_toRightOf="@id/load_label_period"
			android:layout_alignTop="@id/load_subreddit" />
	</RelativeLayout>
</RelativeLayout>